--- a/weddigital-web-master/src/App.css
+++ b/weddigital-web-master/src/App.css
@@ -21,7 +21,7 @@
   --color-cinza-forte: #888;
   --color-bg: #323130;
   --color-contrast: #f7894a;
-  --color-roxo: #400072;
+  --color-roxo: rgb(64 0 114);
   --color-roxo-bg: #ebdefd;
   --color-dourado: #ffbc44;
   --color-quase-preto: #12002a;
