--- a/weddigital-web-master/src/pages/Empresas/Homepage/Homepage-Empresas.css
+++ b/weddigital-web-master/src/pages/Empresas/Homepage/Homepage-Empresas.css
@@ -412,7 +412,7 @@ span.btnCadastroGratis {
   }
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (width >= 992px) {
   main.home section.initial div.row div.col-lg-6:first-child {
     padding-bottom: 10rem;
   }
